Apache Tez Change Log
=====================


Release 0.8.1: Unreleased

INCOMPATIBLE CHANGES

ALL CHANGES:
  TEZ-2827. Increase timeout for TestFetcher testInputAttemptIdentifierMap
  TEZ-2774. Improvements and cleanup of logging for the AM and parts of the runtme.
  TEZ-2825. Report progress in terms of completed tasks to reduce load on AM for Tez UI
  TEZ-2812. Tez UI: Update task & attempt tables while in progress.
  TEZ-2786. Tez UI: Update vertex, task & attempt details page while in progress.
  TEZ-2612. Support for showing allocation delays due to internal preemption
  TEZ-2808. Race condition between preemption and container assignment
  TEZ-2807. Log data in the finish event instead of the start event
  TEZ-2799. SimpleHistoryParser NPE
  TEZ-2643. Minimize number of empty spills in Pipelined Sorter
  TEZ-2783. Refactor analyzers to extend TezAnalyzerBase
  TEZ-2784. optimize TaskImpl.isFinished()
  TEZ-2788. Allow TezAnalyzerBase to parse SimpleHistory logs
  TEZ-2782. VertexInfo.getAvgExecutionTimeInterval throws NPE when task does not have any valid attempts info
  TEZ-2778. Improvements to handle multiple read errors with complex DAGs
  TEZ-2768. Log a useful error message when the summary stream cannot be closed when shutting
  down an AM.
  TEZ-2745. ClassNotFoundException of user code should fail dag
  TEZ-2754. Tez UI: StartTime & EndTime is not displayed with right format in Graphical View
  TEZ-2752. logUnsuccessful completion in Attempt should write original finish
  time to ATS
  TEZ-2755. Fix findbugs warning in TezClient
  TEZ-2767. Make TezMxBeanResourceCalculator the default resource calculator.
  TEZ-2765. Change Xmlwriter to use defaultValue instead of value tag.
  TEZ-2750. Shuffle may not shutdown in case of a fetch failure, causing it to hang.
  TEZ-2294. Add tez-site-template.xml with description of config properties.
  TEZ-2757. Fix download links for Tez releases.