@@ -7,6 +7,7 @@ Release 0.8.1: Unreleased
 INCOMPATIBLE CHANGES
 
 ALL CHANGES:
+  TEZ-2840. MRInputLegacy.init should set splitInfoViaEvents.
   TEZ-2827. Increase timeout for TestFetcher testInputAttemptIdentifierMap
   TEZ-2774. Improvements and cleanup of logging for the AM and parts of the runtme.
   TEZ-2825. Report progress in terms of completed tasks to reduce load on AM for Tez UI
@@ -181,6 +182,7 @@ Release 0.7.1: Unreleased
 INCOMPATIBLE CHANGES
 
 ALL CHANGES:
+  TEZ-2840. MRInputLegacy.init should set splitInfoViaEvents.
   TEZ-2829. Tez UI: minor fixes to in-progress update of UI from AM
   TEZ-2663. SessionNotRunning exceptions are wrapped in a ServiceException from a dying AM.
   TEZ-2825. Report progress in terms of completed tasks to reduce load on AM for Tez UI
